# cairn

./: .gitignore  .mcp.json  README.md  flake.nix  gleam.toml  manifest.toml
rust/: Cargo.toml
rust/src/: commit.rs  encoding.rs  key.rs  lib.rs  session.rs  spec.rs  state.rs  store.rs
rust/tests/: actor_test.rs  cairn_test.rs  cairn_test_v2.rs  sandbox_test.rs
src/: gall.gleam  gall_ffi.erl
src/gall/: daemon.gleam  mcp.gleam  session.gleam
src/ghall/: mcp.gleam  session.gleam
test/: gall_session_test.gleam  gall_store_test.gleam
