[package]
name = "cairn"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Content-addressed witnessed agent work"

[dependencies]
fragmentation = { path = "../../fragmentation" }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
ed25519-dalek = { version = "2" }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
